--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
